app/assets/stylesheets/home.scss
.top {
  text-align: center;

  @include print_hide;

  div.buttons {
    input {
      margin-bottom: 0;
      width: 200px;
      font-size: 15px;
      height: 25px;
    }

    li {
      text-align: left;
    }

    button {
    }
  }

  .welcome {
    opacity: 1;
    height: 240px;
    padding-top: 20px;

    .quarter {
      background-color: #02A672;
      color: white;
      padding: 0 3px;
    }

    -webkit-transition: 1s;
    transition: 1s;
  }
  .welcome.hide-true {
    opacity: 0;
    height: 0;
    overflow: hidden;
  }

  .link-scubooks {
    height: 0px;
    margin-bottom: 5px;
    overflow: hidden;

    -webkit-transition: 200ms;
    transition: 200ms;

    &.show-true {
      margin-bottom: 20px;
      height: 50px;
    }
  }

  .alert {
    text-align: left;
    color: #333;
  }
}





.modal {
  width: 90%;
  margin: -250px 0 0 0;
  left: 5%;

  &.in {
    top: 40% !important;
  }

  .modal-footer {
    text-align: left;
  }

  label {
    margin: 0;
  }

  &#search {
    input[type="checkbox"] {
      margin: -4px 0 0 0;
    }

    .searchlabel {
      padding: 4px 8px 0 0;
      text-align: right;
      -webkit-transition: 0.2s;

      &.active-true {
        background: lightgreen;
      }

      &:hover {
        background: lightgreen;
      }
    }

    .fields {
      opacity: 0.3;
      -webkit-transition: 0.2s;

      &.active-true {
        opacity: 1;
      }

      input, select {
        margin: 0;
      }

      .tall {
        line-height: 28px;
        float: left;
      }

      .btn-toolbar {
        float: left;
        margin: 4px 0 0 10px;

        .active-true {
          color: white;
          background: darkgreen;
        }
      }
    }

    .results {
      height: 500px;
      overflow-y: scroll;

      .instructions {
        text-align: center;
      }

      .course {
        border: 1px solid #ccc;

        .section.validchoice-true:hover {
          background: white !important;
        }
      }
    }
  }
}





.course {
  background: #f7f7f7;
  border: 1px solid #ccc;
  margin-bottom: 15px;

  .inner {
    padding: 0 10px 10px;
    overflow: hidden;
    
    .tooltip {
      z-index: 1000;
    }

    .section {
      border-left: 1px solid #333;
      background: white;
      margin-bottom: 10px;
      overflow: hidden;

      -webkit-transition: 200ms;
      transition: 200ms;

      label {
        margin: 0;
      }

      td {
        border-right: 1px solid black;
        text-align: center;
      }
      td:last-of-type {
        border: none;
      }

      .select {
        width: 20px;
      }

      .schedule {
        width: 135px;
        .days {
          font-size: 20px;
        }
        .times {
          font-size: 14px;
        }
      }

      .seats {
        width: 80px;
        .seats {
          font-size: 20px;
        }
        .remaining {
          font-size: 10px;
        }
      }

      .moreinfo {
        width: 70px;

        .popover {
          width: 60%;
          max-width: none;

          td:nth-child(1) {
            text-align: right;
            border: none;
            font-weight: bold;
            vertical-align: top;
            white-space: nowrap;
          }
          td:nth-child(2) {
            text-align: left;
            padding-left:5px;
          }
        }
      }

      .name {
        width: 80px;
        font-weight: bold;
      }

      .info {
        text-align: left;
        padding-left: 5px;
      }
    }

    .section.validchoice-false, .section.isfull-true:not(.selected-true) {
      color: #777 !important;
      background: #ccc !important;
    }
    .section.validchoice-false:hover label {
      cursor: not-allowed;
    }

    p.scroll {
      text-align: center;
      margin: 0;
    }
  }
}
.course.show-false {
  border-left-width: 10px;
}
.course.show-false .inner {
  height: 35px;
  overflow: hidden;
}





div.calendar {
  $hourheight: 35px;
  position: fixed;
  width: 47.4%;

  .days {
    #S, #U {
      display: none;
    }

    .hours {
      float: left;
      width: 4.5%;
      margin-right: 0.5%;
      margin-top: 16px;

      .hour {
        height: $hourheight;
        text-align: right;
        font-size: 11px;
      }
    }

    .day {
      .day-title {
        height: 25px;
        text-align: center;
        font-weight: bold;
      }

      float: left;
      position: relative;
      width: ((100% - 5) / 5);

      .course-block {
        position: absolute;
        width: 92%;
        margin: 0 2%;
        padding: 0 2%;
        left: 0;
        font-weight: bold;

        label {
          float: right;
          margin: 0;
        }

        .times {
          font-size: 10px;
          line-height: 12px;
        }
        .name {
          font-size: 12px;
        }
      }

      .hour {
        height: $hourheight - 1;
        background: #eee;
        border-top: 1px solid #ccc;
        margin: 0 1.5%;
      }
      .hour.last {
        border-bottom: 1px solid #ccc;
      }
    }
  }

  .bottom {
    float: left;
    width: 100%;
    text-align: center;

    .green-true {
      color: green;
    }
    .green-false {
      color: red;
    }
  }
}
.spacer {
  height: 560px;
}












// default/fallback colors
.course {
  border-left: 3px solid #42D692;
  .section.selected-true {
    border-left: 3px solid #42D692;
  }
  .section:hover, .section.selected-true {
    background: lighten(#42D692, 20%) !important;
  }
}
.course-block {
  background: #42D692;
}


// real colors
$colors: #8AB5E3 #FF6068 #E3A345 #DD8DDD #BCCC90 #C6928D #6ED3EF #FFF07F;
@for $i from 1 through length($colors) {
  $color: nth($colors, $i);
  .course-#{$i} {
    border-left: 3px solid $color;
    .section.selected-true {
      border-left: 3px solid $color !important;
    }
    .section:hover, .section.selected-true {
      background: lighten($color, 20%) !important;
    }
  }
  .course-block.course-#{$i} {
    background: $color !important;
    border: none;
  }
}

